plugins {
	id 'java'
    id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.ben-manes.versions' version '0.53.0'
    id 'org.owasp.dependencycheck' version '12.1.9'
}

group = 'com.lukegjpotter.tools'
version = '0.0.1-SNAPSHOT'
description = 'A suite of tools to help run a CycloCross League.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.jsoup:jsoup:1.21.2'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
    implementation 'com.opencsv:opencsv:5.12.0'
	// Google Sheets API Dependencies.
    implementation 'com.google.api-client:google-api-client:2.8.1'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.39.0'
    implementation 'com.google.apis:google-api-services-sheets:v4-rev20251110-2.0.0'

	// Place the RestAssured dependencies above the SpringBoot Test, so the correct Matchers are used.
    testImplementation 'io.rest-assured:rest-assured:5.5.6'
    testImplementation 'io.rest-assured:json-schema-validator:5.5.6'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

// Remove the *-plain.jar file from being created.
jar {
    enabled = false
}
